feat : MainFX is working